[gd_scene load_steps=6 format=3 uid="uid://bt8usrxhymqqi"]

[ext_resource type="Script" uid="uid://bb5i2eiqmh8w6" path="res://hud.gd" id="1_n10im"]
[ext_resource type="FontFile" uid="uid://cit6gwe5px1q8" path="res://fonts/Xolonium-Regular.ttf" id="2_u6ohr"]

[sub_resource type="LabelSettings" id="LabelSettings_6quqj"]
font_size = 32
font_color = Color(1, 0.635, 0.27, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5e3vm"]
font = ExtResource("2_u6ohr")
font_size = 48
font_color = Color(1, 0.635294, 0.270588, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8hvrr"]
font = ExtResource("2_u6ohr")
font_size = 48
font_color = Color(0.288, 0.492, 0.9, 1)
outline_size = 12
outline_color = Color(0.74, 0.939333, 1, 1)
shadow_size = 4
shadow_color = Color(0.252, 0.3906, 0.63, 0.678431)
shadow_offset = Vector2(0, 4)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_n10im")

[node name="HighestScore" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.047
anchor_right = 0.49
anchor_bottom = 0.047
offset_left = 0.119999
offset_top = -22.84
offset_right = -0.200012
offset_bottom = 22.16
text = "Highest  Score"
label_settings = SubResource("LabelSettings_6quqj")

[node name="ScoreLabel2" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.527
anchor_top = 0.008
anchor_right = 0.985
anchor_bottom = 0.008
offset_left = -0.960007
offset_top = -1.76
offset_right = -0.800049
offset_bottom = 56.24
text = "0"
label_settings = SubResource("LabelSettings_5e3vm")
horizontal_alignment = 2

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.573
anchor_right = 1.0
anchor_bottom = 0.573
offset_left = -2.0
offset_top = -134.56
offset_right = -2.0
offset_bottom = 26.44
text = "Dodge the
Creeps"
label_settings = SubResource("LabelSettings_8hvrr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.502
anchor_top = 1.0
anchor_right = 0.502
anchor_bottom = 1.0
offset_left = -121.96
offset_top = -195.0
offset_right = 123.04
offset_bottom = -104.0
theme_override_fonts/font = ExtResource("2_u6ohr")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
